# fdk-rdf-parser-service

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.development  noxfile.py  openapi.py  openapi.yml  pyproject.toml  start_service.sh
.github/workflows/: audit.yaml  codeql.yaml  constraints.txt  coverage.yaml  deploy-prod&demo.yaml  deploy-staging.yaml
deploy/base/: deployment-fdk-rdf-parser-service.yaml  kustomization.yaml  service-fdk-rdf-parser-service.yaml
deploy/staging/: env.yaml
fdk_rdf_parser_service/: __init__.py  app.py  auth.py  config.py  gunicorn_config.py  model.py  service.py
fdk_rdf_parser_service/endpoints/: __init__.py  handlers.py  liveness.py
fdk_rdf_parser_service/kafka/: __init__.py  avro.py  consumer.py  producer.py
fdk_rdf_parser_service/model/: catalog_type.py  parse_result.py  parser_report.py  rabbit_report.py  rdf_parse_event.py  reasoning_report.py
fdk_rdf_parser_service/parser/: __init__.py  fdk_rdf_parser.py
fdk_rdf_parser_service/parser/classes/: __init__.py  address.py  agent.py  channel.py  concept.py  contactpoint.py  cost.py  cpsvno_service.py  dataservice.py  dataset.py  dcat_resource.py  distribution.py  evidence.py  format.py  info_model.py  legal_resource.py  opening_hours_specification.py  organization.py  output.py  participation.py  public_service.py  requirement.py  rule.py  theme.py
fdk_rdf_parser_service/parser/parse_functions/: __init__.py  address.py  agent.py  catalog.py  channel.py  concept.py  conforms_to.py  contactpoint.py  cost.py  cpsvno_service.py  data_distribution_service.py  dataservice.py  dataset.py  dcat_resource.py  dct_standard.py  distribution.py  event.py  evidence.py  format.py  harvest_meta_data.py  info_model.py  legal_resource.py  media_type.py  model_element.py  model_property.py  opening_hours_specification.py  organization.py  output.py  participation.py  publisher.py  qualified_attribution.py  quality_annotation.py  reference_data_code.py  references.py  requirement.py  rule.py  skos_concept.py  subject.py  temporal.py  theme.py
fdk_rdf_parser_service/parser/rdf_utils/: __init__.py  utils.py
fdk_rdf_parser_service/parser/reference_data/: __init__.py  extend_cpsvno_service.py  extend_dataservice.py  utils.py  (+4 more)
fdk_rdf_parser_service/rabbit/: __init__.py  consumer.py  parser_ingest.py  producer.py  setup_rabbit.py
fdk_rdf_parser_service/repository/: __init__.py
fdk_rdf_parser_service/service/: __init__.py  parse_job.py  parser_service.py  service.py
fdk_rdf_parser_service/view/: __init__.py  liveness.py
kafka/: create_schemas.sh
mock/mappings/: concepts_collections_5e08611a-4e94-3d8f-9d9f-d3a292ec1662-ec8d3887-827a-4509-878c-8ffc61dd9500.json  data-services_catalogs_d07885d9-0925-339f-bb22-58c28dc30409-5f6de4d7-8e9f-4281-83bc-f31921ce082a.json  datasets_catalogs_a73bfe26-7cce-3989-822d-df5f7ee1080f-51054732-1d2d-46b2-ae71-09ef71cf1922.json  events_catalogs_c57567a3-e7f5-3365-84be-a55f8efce424-b0fd9377-5886-4a9f-a0eb-858ebf43c9ad.json  information-models_catalogs_35b052fa-1927-39f7-a482-040655d7720e-32189bd6-8dce-4ee5-9bab-0c1f45888ebf.json  public-services_catalogs_c57567a3-e7f5-3365-84be-a55f8efce424-cd602c36-a180-40d5-b22e-0ff804d0f4cd.json
tests/: conftest.py  testdata.py
tests/contract/: test_endpoints.py  test_ping.py  test_ready.py
tests/data/: bad_syntax.ttl  concept0.ttl  dataservice0.ttl  event0.ttl  information_model0.ttl  missing_dataset.ttl  multiple_datasets.ttl  service0.ttl
tests/integration/: test_endpoints.py  test_fetch_rdf.py  test_handlers.py  test_ping.py  test_ready.py
tests/test_data/: datasets0.ttl
tests/unit/: test_concept.py  test_contactpoint.py  test_data_distribution_service.py  test_data_service.py  test_dataset.py  test_dataset_series.py  test_dcat_resource.py  test_distribution.py  test_dummy.py  test_event.py  test_extend_data_service_with_reference_data.py  test_extend_dataset_with_reference_data.py  test_extend_public_service_with_reference_data.py  test_info_model.py  test_model_element.py  test_model_property.py  test_organization.py  test_parse.py  test_public_service.py  test_publisher.py  test_qualified_attribution.py  test_quality_annotation.py  test_rabbit_report.py  test_reasoning_report.py  test_reference_data.py  test_references.py  test_service_participation.py  test_skos_concept.py  test_subject.py  test_temporal.py  test_utils.py
(+3 files in other folders)
