[tool.poetry]
name = "fdk-rdf-parser-service"
version = "0.1.0"
description = "A Python service that parses RDF data to JSON and serves it to other applications."
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
homepage = "https://github.com/Informasjonsforvaltning/fdk-rdf-parser-service"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
fastapi = "~0.110.0"
fdk-rdf-parser = "^2.6.0"
python = ">=3.9, <3.12"
python-dotenv = "^1.0.0"
python-json-logger = "^2.0.7"
uvicorn = "~0.28.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
codecov = "^2.1.13"
coverage = {extras = ["toml"], version = "^7.2.7"}
httpx = "~0.27.0"
mypy = "^1.9.0"
nox = "^2024.3.2"
nox-poetry = "^1.0.3"
pep8-naming = "^0.13.3"
pytest = "^7.2.1"
pytest-cov = "^4.1.0"
pytest-docker = "^3.1.1"
requests = "^2.31.0"
safety = "^3.0.1"
types-requests = "^2.31.0.10" 
ruff = "^0.3.2"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "fdk_rdf_parser.*",
  "pythonjsonlogger.*",
  "nox",
  "nox_poetry.*",
  "requests.*",
  "httpx.*",
]

[tool.coverage.run]
source = ["fdk_rdf_parser_service"]

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
