[tool.poetry]
name = "fdk-rdf-parser-service"
version = "0.1.0"
description = "A Python service that parses RDF data to JSON and serves it to other applications."
authors = ["Digdir <fellesdatakatalog@digdir.no>"]
homepage = "https://github.com/Informasjonsforvaltning/fdk-rdf-parser-service"
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.dependencies]
fastapi = "~0.115.12"
fdk-rdf-parser = "^2.8.3"
python = ">=3.9, <3.14"
python-dotenv = "^1.1.0"
python-json-logger = "^3.3.0"
uvicorn = "~0.34.0"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.8.0"}
httpx = "~0.28.1"
mypy = "^1.15.0"
nox = "^2025.2.9"
nox-poetry = "^1.2.0"
pep8-naming = "^0.15.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-docker = "^3.2.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20250328"
ruff = "^0.11.2"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "fdk_rdf_parser.*",
  "pythonjsonlogger.*",
  "nox",
  "nox_poetry.*",
  "requests.*",
  "httpx.*",
]

[tool.coverage.run]
source = ["fdk_rdf_parser_service"]

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
markers = [
  "unit: marks tests as unit (fast)",
  "integration: marks tests as integration (slower)",
  "contract: marks test as contract (slow)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
